# server/openApi.json
@@ -467,36 +467,6 @@
         ]
       }
     },
-    "/system/user/balance": {
-      "put": {
-        "operationId": "UserController_updateBalance",
-        "summary": "用户-修改余额",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateBalanceDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "用户管理"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      }
-    },
     "/system/user/export": {
       "post": {
         "operationId": "UserController_export",
@@ -3602,23 +3572,6 @@
         "required": [
           "userId",
           "password"
-        ]
-      },
-      "UpdateBalanceDto": {
-        "type": "object",
-        "properties": {
-          "userId": {
-            "type": "number",
-            "description": "用户ID"
-          },
-          "amount": {
-            "type": "number",
-            "description": "金额变更值，可以为正数（增加金额）或负数（减少金额）"
-          }
-        },
-        "required": [
-          "userId",
-          "amount"
         ]
       },
       "DateParamsDTO": {
