# server/src/module/system/user/user.controller.ts
@@ -8,7 +8,7 @@ import { GetNowDate } from 'src/common/utils'
 import { ResultData } from 'src/common/utils/result'
 import { UploadService } from 'src/module/upload/upload.service'
 
-import { ChangeStatusDto, CreateUserDto, ListUserDto, ResetPwdDto, UpdateBalanceDto, UpdateProfileDto, UpdatePwdDto, UpdateUserDto } from './dto/index'
+import { ChangeStatusDto, CreateUserDto, ListUserDto, ResetPwdDto, UpdateProfileDto, UpdatePwdDto, UpdateUserDto } from './dto/index'
 import { UserService } from './user.service'
 
 @ApiTags('用户管理')
@@ -181,15 +181,6 @@ export class UserController {
   remove(@Param('id') ids: string) {
     const menuIds = ids.split(',').map(id => +id)
     return this.userService.remove(menuIds)
-  }
-
-  @ApiOperation({
-    summary: '用户-修改余额',
-  })
-  @RequirePermission('system:user:edit')
-  @Put('/balance')
-  updateBalance(@Body() updateBalanceDto: UpdateBalanceDto) {
-    return this.userService.updateBalance(updateBalanceDto)
   }
 
   @ApiOperation({
