# server/src/module/system/user/user.service.ts
@@ -18,7 +18,7 @@ import { SysPostEntity } from '../post/entities/post.entity'
 import { AuthUserCancelAllDto, AuthUserCancelDto, AuthUserSelectAllDto } from '../role/dto/index'
 import { RoleService } from '../role/role.service'
 
-import { AllocatedListDto, ChangeStatusDto, CreateUserDto, ListUserDto, ResetPwdDto, UpdateBalanceDto, UpdateProfileDto, UpdatePwdDto, UpdateUserDto } from './dto/index'
+import { AllocatedListDto, ChangeStatusDto, CreateUserDto, ListUserDto, ResetPwdDto, UpdateProfileDto, UpdatePwdDto, UpdateUserDto } from './dto/index'
 import { UserEntity } from './entities/sys-user.entity'
 import { SysUserWithPostEntity } from './entities/user-width-post.entity'
 import { SysUserWithRoleEntity } from './entities/user-width-role.entity'
@@ -812,15 +812,6 @@ export class UserService {
     // 直接存储新的明文密码
     await this.userRepo.update({ userId: user.user.userId }, { password: newPassword })
     return ResultData.ok()
-  }
-
-  /**
-   * 修改用户余额
-   * @param updateBalanceDto
-   * @returns
-   */
-  async updateBalance(updateBalanceDto: UpdateBalanceDto) {
-    throw new BadRequestException('功能已移除')
   }
 
   /**
